alignment fixes

--- a/Cart/cart.css
+++ b/Cart/cart.css
@@ -20,7 +20,7 @@ body {
 }
 
 .cart-title {
-    margin-top: 20vh;
+    margin-top: 17.5vh;
     text-align: center;
     letter-spacing: 5px;
     word-spacing: 10px;
