--- a/Wishlist/wishlist.css
+++ b/Wishlist/wishlist.css
@@ -22,7 +22,7 @@ body {
 }
 
 .wishlist-title {
-    margin-top: 20vh;
+    margin-top: 17.5vh;
     text-align: center;
     letter-spacing: 5px;
     word-spacing: 10px;
